# PolicyMatcher_PA

./: README.md  pyproject.toml  system_design.md
data/: rule_registry.json  sample_patient.json
src/policy_matcher/: ingestion.py  llm_utils.py  main.py  patient.py  rules.py  run_indexing.py  run_ingestion.py  run_pipeline.py
src/policy_matcher/pipeline/: indexing.py  ingestion.py  mining.py  registry.py  review.py
