[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "policy-matcher"
version = "0.1.0"
description = "PA Decision Support System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "opensearch-py>=2.0.0",
    "pymupdf>=1.23.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
]
